# cpp_suffix_tree

./: .clang-format  CMakeLists.txt  README.md
src/: Example.cpp  Node.cpp  Node.hpp  SuffixTree.cpp  SuffixTree.hpp
tests/: TestsSuffixTree.cpp
